--- a/index.html
+++ b/index.html
@@ -58,7 +58,9 @@ table {
             window.onload = function() {
                 var heatmapInstance = h337.create({
                   // only container is required, the rest will be defaults
-                  container: document.querySelector('.heatmap')
+                  container: document.querySelector('.heatmap'),
+                  radius: 5,
+                  blur: .9
                 });
 
                 var points = [];
@@ -67,18 +69,8 @@ table {
                 var max = 0;
                 var offset = 0;
 
-                for (var x = 0; x < width; x+=30) {
-                    for (var y = 0; y < height; y+=30) {
-                        var value = Math.sin(x);
-                        var point = {
-                            x: x,
-                            y: y,
-                            value: value 
-                        }
-                        max = Math.max(max, value); 
-                        points.push(point);
-                    }
-                }
+                var n = Math.random() * 10;
+                var d = Math.random() * 10;
 
                 var data = { 
                     max: max, 
@@ -88,31 +80,26 @@ table {
                 heatmapInstance.setData(data);
 
                 setInterval(function(){
-                    offset += 0.05;
+                    offset += 0.03;
 
-                    points = [];
-
-                    for (var x = 0; x < width; x+=30) {
-                        for (var y = 0; y < height; y+=30) {
-                            var value = Math.sin(x + offset);
-                            var point = {
-                                x: x,
-                                y: y,
-                                value: value 
-                            }
-                            max = Math.max(max, value); 
-                            points.push(point);
+                    for (var i = 0; i < 1; i++) {
+                        var point = {
+                            x: Math.cos((n/d)*offset + i)*Math.cos(offset + i)*300 + 300,
+                            y: Math.cos((n/d)*offset + i)*Math.sin(offset + i)*300 + 300,
+                            value: 10 
                         }
+                        points.push(point);
                     }
+                
 
                     var data = { 
-                        max: max, 
+                        max: 10, 
                         data: points 
                     };
 
                     heatmapInstance.setData(data);
                     heatmapInstance.repaint();
-                },100);
+                },10);
             }
         </script>
         <div class="heatmap" style="width:100%; height:100%;">
