--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     </head>
     <body>
 		<canvas id="myCanvas" width="400" height="400" style="border:1px solid #000000;"></canvas>
+		<div id="timesincecollision"></div>
         <script type="text/javascript" src="driving2.js"></script>
     </body>
 </html>
