--- a/index.html
+++ b/index.html
@@ -4,7 +4,16 @@
     </head>
     <body>
 		<canvas id="myCanvas" width="400" height="400" style="border:1px solid #000000;"></canvas>
+		<br/>
 		<div id="timesincecollision"></div>
+		<br/>
+		<input type="text" id="speed"></input> Speed
+		<br/>
+		<br/>
+		<input type="text" id="randomness"></input> Randomness (between 0 and 1)
+		<br/>
+		<br/>
+		<button type="button" id="clearobstacles">Clear Obstacles</button>
         <script type="text/javascript" src="driving2.js"></script>
     </body>
 </html>
