working on new graphics

--- a/index.html
+++ b/index.html
@@ -1,3 +1,25 @@
+<!DOCTYPE html>
+<html>
+	<head>
+		<meta charset=utf-8>
+		<title>driving</title>
+		<style>
+			body { margin: 0; }
+			canvas { width: 100%; height: 100% }
+		</style>
+	</head>
+	<body>
+		<script src="three.min.js"></script>
+		<script src="LoaderSupport.js"></script>
+		<script src="OBJLoader.js"></script>
+		<script src="MTLLoader.js"></script>
+		<script src="carObj.js"></script>
+		<script src="natureObj.js"></script>
+                <script type="text/javascript" src="driving2.js"></script>
+	</body>
+</html>
+
+<!--
 <html>
     <head>
         <title>driving</title>
@@ -17,3 +39,4 @@
         <script type="text/javascript" src="driving2.js"></script>
     </body>
 </html>
+-->
