--- a/index.html
+++ b/index.html
@@ -5,17 +5,18 @@
 		<title>driving</title>
 		<style>
 			body { margin: 0; }
-			canvas { width: 100%; height: 100% }
+			canvas { width: 100%; height: 100%; }
 		</style>
 	</head>
 	<body>
+		<script type="text/javascript" src="dat.gui.js"></script>
 		<script src="three.min.js"></script>
 		<script src="LoaderSupport.js"></script>
 		<script src="OBJLoader.js"></script>
 		<script src="MTLLoader.js"></script>
 		<script src="carObj.js"></script>
 		<script src="natureObj.js"></script>
-                <script type="text/javascript" src="driving2.js"></script>
+         <script type="text/javascript" src="driving2.js"></script>
 	</body>
 </html>
 
