--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
             <img src="https://i.imgur.com/TBlXedl.gif" width=500/>
             </br>
             </br>
-            Link to play (Works best in Chrome): <a href="http://mgerdes.github.io/minigolf.html">http://mgerdes.github.io/minigolf.html</a>
+            Link to play (Works best in Chrome): <a href="https://mgerdes.github.io/minigolf.html">https://mgerdes.github.io/minigolf.html</a>
             </br>
-            Source code: <a href="http://github.com/mgerdes/minigolf">http://github.com/mgerdes/minigolf</a>
+            Source code: <a href="https://github.com/mgerdes/minigolf">https://github.com/mgerdes/minigolf</a>
             <ul>
                 <li>
                     This is a (mostly) from scratch minigolf game I wrote in C. 
@@ -86,7 +86,7 @@
             <img src="https://i.imgur.com/EQMZJTh.gif" width=500/>
             </br>
             </br>
-            Source code: <a href="http://github.com/mgerdes/PhysicsEngine">http://github.com/mgerdes/PhysicsEngine</a>
+            Source code: <a href="https://github.com/mgerdes/PhysicsEngine">https://github.com/mgerdes/PhysicsEngine</a>
             <ul>
                 <li>
                     This is a 3D Physics Engine and Renderer I made using C++ / OpenGL. 
@@ -107,7 +107,7 @@
             </video>
             </br>
             </br>
-            Source code: <a href="http://github.com/mgerdes/water-simulation">http://github.com/mgerdes/water-simulation</a>
+            Source code: <a href="https://github.com/mgerdes/water-simulation">https://github.com/mgerdes/water-simulation</a>
             <ul>
                 <li>
                     This is a 3D water simulation I made using C++ / OpenGL. 
