--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             Source code: <a href="https://github.com/mgerdes/minigolf">https://github.com/mgerdes/minigolf</a>
             <ul>
                 <li>
-                    This is a (mostly) from scratch minigolf game I wrote in C. 
+                    This is a minigolf game I wrote in C without a game engine. 
                 </li>
                 <li>
                     Used the <a href="https://github.com/floooh/sokol">Sokol</a> libraries to create a cross platform application with 3D graphics and audio. This allowed using Emscripten to compile into JavaScript and make it playable at the link above.
