--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 </li>
                 <img src="https://i.imgur.com/fCoKT2e.gif" width=500/>
                 <li>
-                    Used the library Lightmapper to generate lightmaps for the terrain and also xatlas to generate lightmap UVs. These lightmaps are then baked into the files for the courses. It can also interpolate between multiple samples to create lightmaps for some moving objects.
+                    Used the library <a href="https://github.com/ands/lightmapper">Lightmapper</a> to generate lightmaps for the terrain and also xatlas to generate lightmap UVs. These lightmaps are then baked into the files for the courses. It can also interpolate between multiple samples to create lightmaps for some moving objects.
                 </li>
                 <img src="https://i.imgur.com/ADw5kCw.gif" width=500/>
                 <img src="https://i.imgur.com/tUJyHRk.gif" width=500/>
