--- a/index.html
+++ b/index.html
@@ -6,7 +6,14 @@
         <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     </head>
     <body style="margin-left:50px; margin-right:50px;">
-        <h1>Michael Gerdes Portfolio</h1>
+		<h1>Michael Gerdes</h1>
+        <div style="padding-bottom:20px;">
+			Hi! I'm Michael, a programmer with an interest making games. 
+			I like trying to program from scratch and at a lower-level to gain a deeper understanding of what is going on
+			Below is a list of projects I've worked on to showcase that. 
+			Please contact me at mgerdes11@gmail.com if you have any questions. 
+			Thanks for taking a look!
+		</div>
         <div class="w3-light-grey" style="padding-right:20px;padding-left:20px;padding-bottom:20px;border:1px solid #AAAAAA;">
             <h2>Minigolf</h2>
             <img src="https://i.imgur.com/TBlXedl.gif" width=500/>
