--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<h1>Michael Gerdes</h1>
         <div style="padding-bottom:20px;">
 			Hi! I'm Michael, a programmer with an interest making games. 
-			I like trying to program from scratch and at a lower-level to gain a deeper understanding of what is going on
+			I like trying to program from scratch and at a lower-level to gain a deeper understanding of what is going on.
 			Below is a list of projects I've worked on to showcase that. 
 			Please contact me at mgerdes11@gmail.com if you have any questions. 
 			Thanks for taking a look!
