--- a/minigolf.html
+++ b/minigolf.html
@@ -4,7 +4,7 @@
     <script src="coi-serviceworker.min.js"></script>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no"/>
-    <title>Emscripten-Generated Code</title>
+    <title>Open Golf</title>
     <style>
         body { margin: 0; background-color: black }
         .game {
@@ -60,7 +60,7 @@
         console.log("onerror: " + event.message);
       };
     </script>
-    <script async type="text/javascript" src="minigolf.js"></script>
+    <script async type="text/javascript" src="golf.js"></script>
   </body>
 </html>
 
