--- a/index.html
+++ b/index.html
@@ -8,23 +8,27 @@
     <body style="margin-left:50px; margin-right:50px;">
 		<h1>Michael Gerdes</h1>
         <div style="padding-bottom:20px;">
-			Hi! I'm Michael, a programmer with an interest making games. 
-			I like trying to program from scratch and at a lower-level to gain a deeper understanding of what is going on.
+			Hi! I'm Michael, a programmer with an interest in making cool stuff!
+			For hobby projects I like trying to program from scratch and at a lower-level to gain a deeper understanding of what is going on.
 			Below is a list of projects I've worked on to showcase that. 
 			Please contact me at mgerdes11@gmail.com if you have any questions. 
 			Thanks for taking a look!
 		</div>
         <div class="w3-light-grey" style="padding-right:20px;padding-left:20px;padding-bottom:20px;border:1px solid #AAAAAA;">
-            <h2>Minigolf</h2>
+            <h2>Open Golf</h2>
             <img src="https://i.imgur.com/TBlXedl.gif" width=500/>
             </br>
             </br>
-            Link to play (Works best in Chrome): <a href="https://mgerdes.github.io/minigolf.html">https://mgerdes.github.io/minigolf.html</a>
-            </br>
+            Link to play:
+			<ul>
+				<li>HTML: <a href="https://mgerdes.github.io/minigolf.html">https://mgerdes.github.io/minigolf.html</a> (Works best in Chrome)</li>
+				<li>Android: <a href="https://play.google.com/store/apps/details?id=me.mgerdes.open_golf">https://play.google.com/store/apps/details?id=me.mgerdes.open_golf</a></li>
+				<li>iOS: <a href="https://apps.apple.com/us/app/open-golf/id1615224465">https://apps.apple.com/us/app/open-golf/id1615224465</a></li>
+			</ul>
             Source code: <a href="https://github.com/mgerdes/minigolf">https://github.com/mgerdes/minigolf</a>
             <ul>
                 <li>
-                    This is a minigolf game I wrote in C without a game engine. 
+                    This is a cross-platform minigolf game I wrote in C. 
                 </li>
                 <li>
                     Used the <a href="https://github.com/floooh/sokol">Sokol</a> libraries to create a cross platform application with 3D graphics and audio. This allowed using Emscripten to compile into JavaScript and make it playable at the link above.
